--- a/index.html
+++ b/index.html
@@ -30,15 +30,16 @@
         <img
         id="profile_image"
           src=""
-          style="width: 400px; height: 450px"
+          style="width: 350px; height: 380px"
           alt=""
           class="profile"
         />
       </div>
       <div class="about-box">
         <h1 class="about-title" data-aos="zoom-in">Who am I ?</h1>
-        <p><span id="fullname"> Your Full Name </span></p>
-        <p class="about-content" data-aos="zoom-in">
+        <p class="about-content" data-aos="zoom-in" data-aos-offset="20">
+          <span id="fullname"> Your Full Name </span>
+          <br style="display:block;margin-bottom: 2%;">
           <span id="about">
             About you 
           </span>
@@ -52,7 +53,7 @@
         <div class="portfolio-item medium three" data-aos="fade-right"><span id="skill-3"> Skill 3 </div>
         <div class="portfolio-item small four" data-aos="zoom-in">Skills</div>
         <div class="portfolio-item tall five" data-aos="fade-up"><span id="skill-4"> Skill 4 </div>
-        <div class="portfolio-item wide six" data-aos="fade-right"><span id="skill-5"> Skill 5 </div>
+        <div class="portfolio-item wide six" data-aos="fade-right" data-aos-offset="20"><span id="skill-5"> Skill 5 </div>
       </div>
     </section>
     <section class="section-4" data-aos="fade-up" dir="ltr">
@@ -61,7 +62,7 @@
         <li data-aos="zoom-in-up"><a target="_blank" id="instagram" href=""><i class="fab fa-instagram-square"></i></a></li>
         <li data-aos="zoom-in-up"><a target="_blank" id="twitter" href=""><i class="fab fa-twitter-square"></i></a></li>
         <li data-aos="zoom-in-up"><a target="_blank" id="github" href=""><i class="fab fa-github-square"></i></a></li>
-        <li data-aos="zoom-in-up"><a target="_blank" id="linkedin" href=""><i class="fab fa-linkedin-square"></i></a></li>
+        <li data-aos="zoom-in-up" data-aos-offset="20"><a target="_blank" id="linkedin" href=""><i class="fab fa-linkedin-square"></i></a></li>
       </ul>
     </section>
 
@@ -74,3 +75,4 @@
     <script type="text/javascript" src="index.js"></script>
   </body>
 </html>
+
